--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: 鱼小柔
  * @Date: 2020-03-07 22:26:35
  * @LastEditors: your name
- * @LastEditTime: 2020-09-06 21:47:00
+ * @LastEditTime: 2020-09-06 22:45:48
  * @Description: file content
 -->
 <!DOCTYPE html>
@@ -28,7 +28,7 @@
     <a href="./formula/heart.html">公式与web前端-画♥</a>
     <a href="./formula/collide.html">公式与web前端-碰撞检测</a>
     <a href="./css3-perspective/index.html">透视应用-画多面体</a>
-    <a href="./dist/index.html">学习小组</a>
+    <a href="./study-group-homework/index.html">学习小组</a>
 </section>
 
 </body>
