--- a/index.html
+++ b/index.html
@@ -2,34 +2,23 @@
  * @Author: 鱼小柔
  * @Date: 2020-03-07 22:26:35
  * @LastEditors: your name
- * @LastEditTime: 2020-09-06 22:45:48
+ * @LastEditTime: 2020-10-08 11:46:20
  * @Description: file content
 -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>学习小组-vue学习-demo集合</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-</head>
-<style>
-    body{
-        position: fixed;
-        width: 100%;
-        height: 100%;
-    }
-    a{
-        display: block;
-    }
-
-</style>
-<body>
-<section>
-    <a href="./formula/heart.html">公式与web前端-画♥</a>
-    <a href="./formula/collide.html">公式与web前端-碰撞检测</a>
-    <a href="./css3-perspective/index.html">透视应用-画多面体</a>
-    <a href="./study-group-homework/index.html">学习小组</a>
-</section>
-
-</body>
+  </head>
+  
+  <body>
+    <section id="nav">
+      <a href="./formula/heart.html">公式与web前端-画♥</a>
+      <a href="./formula/collide.html">公式与web前端-碰撞检测</a>
+      <a href="./css3-perspective/index.html">透视应用-画多面体</a>
+      <a href="./study-group-homework/index.html">学习小组</a>
+    </section>
+  </body>
 </html>
