--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   
   <body>
     <section id="nav">
-      <a href="./formula/heart.html">公式与web前端-画♥</a>
-      <a href="./formula/collide.html">公式与web前端-碰撞检测</a>
+      <a href="./math/pretty.html">公式与web前端-画♥</a>
+      <a href="./math/heart.html">公式与web前端-画♥</a>
+      <a href="./math/collide.html">公式与web前端-碰撞检测</a>
       <a href="./css3-perspective/index.html">透视应用-画多面体</a>
       <a href="./study-group-homework/index.html">学习小组</a>
     </section>
