--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <body>
     <section id="nav">
-      <a href="./math/pretty.html">公式与web前端-画♥</a>
+      <a href="./math/pretty.html">减肥记录♥</a>
       <a href="./math/heart.html">公式与web前端-画♥</a>
       <a href="./math/collide.html">公式与web前端-碰撞检测</a>
       <a href="./css3-perspective/index.html">透视应用-画多面体</a>
