--- a/math/pretty.html
+++ b/math/pretty.html
@@ -50,7 +50,7 @@
             xAxis: {
                 type: "category",
                 boundaryGap: false,
-                data: ["7.17", "8.6", "8.20", "9.3", "9.17", "9.30"],
+                data: ["7.17", "8.6", "8.20", "9.3", "9.17", "9.30","20230331"],
             },
             yAxis: {
                 type: "value",
@@ -63,7 +63,7 @@
                     name: "体重",
                     type: "line",
                     areaStyle: {},
-                    data: [98.6, 97.0, 96.2, 94, 94.2, 91.0],
+                    data: [98.6, 97.0, 96.2, 94, 94.2, 91.0, 98.2],
                 },
             ];
 
@@ -74,7 +74,7 @@
                 {
                     name: "体脂率",
                     type: "line",
-                    data: [34.2, 33.7, 34.2, 33.2, 32.2, 32.6],
+                    data: [34.2, 33.7, 34.2, 33.2, 32.2, 32.6, 28.8],
                 },
             ];
 
@@ -85,12 +85,12 @@
                 {
                     name: "腿部脂肪",
                     type: "line",
-                    data: [5.8, 5.4, 5.6, 5.4, 5.4, 5],
+                    data: [5.8, 5.4, 5.6, 5.4, 5.4, 5, 4.7],
                 },
                 {
                     name: "腿部肌肉",
                     type: "line",
-                    data: [10.04, 9.79, 9.98, 9.94, 10.03, 9.63],
+                    data: [10.04, 9.79, 9.98, 9.94, 10.03, 9.63,10.8],
                 },
             ]);
         }
@@ -99,12 +99,12 @@
                 {
                     name: "手臂脂肪",
                     type: "line",
-                    data: [2.4, 2.4, 2.3, 2.2, 2.2, 2.1],
+                    data: [2.4, 2.4, 2.3, 2.2, 2.2, 2.1, 2.13],
                 },
                 {
                     name: "手臂肌肉",
                     type: "line",
-                    data: [2.42, 2.44, 2.44, 2.32, 2.29, 2.34],
+                    data: [2.42, 2.44, 2.44, 2.32, 2.29, 2.34, 3],
                 },
             ]);
         }
@@ -113,12 +113,12 @@
                 {
                     name: "内脏脂肪",
                     type: "line",
-                    data: [7.7, 7.6, 7.6, 7.1, 6.8, 6.8],
+                    data: [7.7, 7.6, 7.6, 7.1, 6.8, 6.8, 7.2],
                 },
                 {
                     name: "内脏肌肉",
                     type: "line",
-                    data: [13.6, 13.6, 13.8, 13.4, 13.2, 13.5],
+                    data: [13.6, 13.6, 13.8, 13.4, 13.2, 13.5, 15.3],
                 },
             ]);
         }
@@ -127,12 +127,12 @@
                 {
                     name: "体脂肪",
                     type: "line",
-                    data: [16.8, 16.3, 16.4, 15.6, 15.2, 14.8],
+                    data: [16.8, 16.3, 16.4, 15.6, 15.2, 14.8, 14.2],
                 },
                 {
                     name: "骨骼肌",
                     type: "line",
-                    data: [17, 16.9, 16.7, 16.5, 16.7, 16.1],
+                    data: [17, 16.9, 16.7, 16.5, 16.7, 16.1, 18.7],
                 },
             ]);
         }
@@ -141,27 +141,27 @@
                 {
                     name: "腿部脂肪",
                     type: "line",
-                    data: [5.8, 5.4, 5.6, 5.4, 5.4, 5],
+                    data: [5.8, 5.4, 5.6, 5.4, 5.4, 5, 4.7],
                 },
                 {
                     name: "腿部肌肉",
                     type: "line",
-                    data: [10.04, 9.79, 9.98, 9.94, 10.03, 9.63],
+                    data: [10.04, 9.79, 9.98, 9.94, 10.03, 9.63,10.8],
                 },
                 {
                     name: "手臂脂肪",
                     type: "line",
-                    data: [2.4, 2.4, 2.3, 2.2, 2.2, 2.1],
+                    data: [2.4, 2.4, 2.3, 2.2, 2.2, 2.1, 2.13],
                 },
                 {
                     name: "手臂肌肉",
                     type: "line",
-                    data: [2.42, 2.44, 2.44, 2.32, 2.29, 2.34],
+                    data: [2.42, 2.44, 2.44, 2.32, 2.29, 2.34, 3],
                 },
                 {
                     name: "内脏脂肪",
                     type: "line",
-                    data: [7.7, 7.6, 7.6, 7.1, 6.8, 6.8],
+                    data: [7.7, 7.6, 7.6, 7.1, 6.8, 6.8, 7.2],
                 },
                 {
                     name: "内脏肌肉",
@@ -172,13 +172,13 @@
                     name: "体脂肪",
                     type: "line",
 
-                    data: [16.8, 16.3, 16.4, 15.6, 15.2, 14.8],
+                    data: [16.8, 16.3, 16.4, 15.6, 15.2, 14.8, 14.2],
                 },
                 {
                     name: "骨骼肌",
                     type: "line",
 
-                    data: [17, 16.9, 16.7, 16.5, 16.7, 16.1],
+                    data: [17, 16.9, 16.7, 16.5, 16.7, 16.1, 18.7],
                 },
             ]);
         }
